Changed long construction valueof is more efficient.